--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,41 @@
   </head>
 
   <body>
+    <headers>
+      <%= link_to 'Bookers', root_path %>
+
+      <% if user_signed_in? %>
+       <li>
+         <%= link_to "Home", user_path %>
+       </li>
+       <li>
+         <%= link_to "Users", users_path %>
+       </li>
+       <li>
+         <%= link_to "Books", books_path %>
+       </li>
+       <li>
+         <%= link_to "Log out", destroy_user_session_path, method: :DELETE %>
+       </li>
+      <% else %>
+       <li>
+         <%= link_to "Home", root_path %>
+       </li>
+       <li>
+         <%= link_to "About", about_path %>
+       </li>
+       <li>
+         <%= link_to "Sign up", new_user_registration_path %>
+       </li>
+       <li>
+         <%= link_to "Log in", new_user_session_path %>
+       </li>
+      <% end %>
+
+    </headers>
     <%= yield %>
+    <footer>
+      CopyRight Infratop.inc
+    </footer>
   </body>
 </html>
