--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,8 +5,8 @@
   
   <div class="field">
     <%= f.label :name %><br />
-    <%= f.name_field :name, autofocus: true, autocomplete: "" %>
-  </div>
+    <%= f.name_field :name, autofocus: true, autocomplete: "name" %>
+  </div>　
 
   <div class="field">
     <%= f.label :email %><br />
