--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,36 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<h1>User info</h1>
+
+<% if user.profile_image_attached? %>
+ <%= image_tag user.profile_image, size: "100×100" %>
+<% else %>
+ <%= image_tag 'no_image', size: "100×100" %>
+<% end %>
+
+<table>
+  <thead>
+    <tr>
+      <th>name</th>
+      <th>introduction</th>
+    </tr>
+  </thead>
+    <tr>
+      <th><%= user.name %></th>
+      <th><%= user.introduction %></th>
+    </tr>
+</table>
+
+<%= link_to 'edit', edit_user_path(@user) %>
+
+<h1>New book</h1>
+
+<%= form_with model: @book, url: books_path %>
+
+<p>Title</p>
+<%= f.text_field :title %>
+
+<p>Opinion</p>
+<%= f.text_field :body %>
+
+<%= f.submit 'Create Book' %>
+
+<h1>Books</h1>
